# MiroWorld

./: .env.example  .gitignore  BRD.md  LICENSE  Poster.md  Progress.md  Prompt_To_Claude.md  README.md  demo-output.json  docker-compose.yml  index.html  poster.html  quick_start.sh  test_gemini.py  test_sim2.py
backend/: .env.example  Dockerfile  Dockerfile.oasis  README.md  pyproject.toml  requirements-oasis-runtime.txt
backend/.playwright-cli/: page-2026-04-08T17-14-45-012Z.yml  page-2026-04-08T17-15-48-831Z.yml  page-2026-04-08T17-15-56-089Z.yml  page-2026-04-08T17-16-03-236Z.yml
backend/Sample_Inputs/: singapore_budget_ai_strategic_advantage.md
backend/data/: demo-output.json
backend/scripts/: benchmark.py  check_oasis_runtime.py  debug_phase_b.py  generate_comprehensive_demo_cache.py  generate_demo_cache.py  generate_demo_cache_v2.py  generate_v2_demo_cache_from_url.py  oasis_probe.py  oasis_reddit_runner.py  oasis_server.py  prepare_demo_cache.py  run_e2e.py
backend/tests/: test_api_phase_a.py  test_caching_llm_client.py  test_config_paths.py  test_console_routes.py  test_graphiti_service.py  test_lightrag_service.py  test_llm_client.py  test_memory_service.py  test_metrics_service.py  test_metrics_service_routes.py  test_oasis_reddit_runner.py  test_persona_relevance_service.py  test_persona_sampler.py  test_phase_b_pipeline.py  test_phase_c_memory.py  test_phase_d_report.py  test_phase_e_dashboard.py  test_report_service.py  test_scrape_service.py  test_simulation_service.py  test_simulation_stream_service.py  test_token_tracker.py  test_v2_filters.py  (+3 more)
(+308 files in other folders)
