[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mckainsey-backend"
version = "0.1.0"
description = "McKAInsey backend services"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.1",
  "datasets>=4.0.0",
  "duckdb>=1.3.2",
  "huggingface-hub>=0.34.4",
  "numpy>=2.3.2",
  "lightrag-hku>=1.4.10",
  "openai>=1.99.9",
  "requests>=2.32.0",
  "beautifulsoup4>=4.13.0",
  "zep-cloud>=3.18.0",
  "python-dotenv>=1.1.1",
  "python-multipart>=0.0.20",
  "pypdf>=5.9.0",
  "python-docx>=1.2.0",
  "camel-oasis>=0.2.5; python_version < '3.12'"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "httpx>=0.28.1",
  "ruff>=0.12.9"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
